fix navbar left whitespace

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -51,3 +51,7 @@ input:hover {
 a {
 	text-decoration: none;
 }
+
+/* *{
+  outline:solid 1px lime;
+} */
